--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,11 @@
             <version>20240303</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
