--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,15 @@
         <version.caffeine>3.1.6</version.caffeine>
         <spring-ai.version>1.0.0-M6</spring-ai.version>
         <modelmapper.version>3.1.0</modelmapper.version>
+        <javatube.version>1.0.0</javatube.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -353,6 +361,28 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <!-- Video Downloader Dependencies -->
+        <!-- Removed JavaTube dependency due to resolution issues -->
+
+        <dependency>
+            <groupId>com.github.sealedtx</groupId>
+            <artifactId>java-youtube-downloader</artifactId>
+            <version>3.2.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+        <!-- JSoup for HTML parsing -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.4</version>
         </dependency>
 
     </dependencies>
