--- a/config/application-kafka.yml
+++ b/config/application-kafka.yml
@@ -1,7 +1,3 @@
-# ===================================================================
-# KAFKA CONFIGURATION
-# ===================================================================
-
 spring:
   kafka:
     # Common Kafka settings
@@ -18,11 +14,11 @@ spring:
         spring.deserializer.key.delegate.class: org.apache.kafka.common.serialization.StringDeserializer
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         # Cấu hình JsonDeserializer
-        spring.json.trusted.packages: com.authenhub.dto.kafka,java.util,java.lang
+        spring.json.trusted.packages: com.authenhub.kafka.dto,java.util,java.lang
         spring.json.value.default.type: java.lang.Object
         # Thêm các cấu hình để xử lý type information
         spring.json.use.type.headers: false
-        spring.json.type.mapping: inventoryEvent:com.authenhub.dto.kafka.InventoryEvent,salesEvent:com.authenhub.dto.kafka.SalesEvent,replenishmentEvent:com.authenhub.dto.kafka.ReplenishmentEvent
+        spring.json.type.mapping: inventoryEvent:com.authenhub.kafka.dto.InventoryEvent,salesEvent:com.authenhub.kafka.dto.SalesEvent,replenishmentEvent:com.authenhub.kafka.dto.ReplenishmentEvent
     # Producer common configuration
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -30,7 +26,7 @@ spring:
       properties:
         # Cấu hình JsonSerializer để thêm type information vào header
         spring.json.add.type.headers: false
-        spring.json.type.mapping: inventoryEvent:com.authenhub.dto.kafka.InventoryEvent,salesEvent:com.authenhub.dto.kafka.SalesEvent,replenishmentEvent:com.authenhub.dto.kafka.ReplenishmentEvent
+        spring.json.type.mapping: inventoryEvent:com.authenhub.kafka.dto.InventoryEvent,salesEvent:com.authenhub.kafka.dto.SalesEvent,replenishmentEvent:com.authenhub.kafka.dto.ReplenishmentEvent
     # Listener common configuration
     listener:
       ack-mode: MANUAL_IMMEDIATE
