--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
     <description>Authentication Gateway application</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <jjwt.version>0.11.5</jjwt.version>
         <version.snakeyaml>2.0</version.snakeyaml>
         <netty.version>4.1.89.Final</netty.version>
-        <lombok.version>1.18.26</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
         <slf4j.version>2.0.6</slf4j.version>
         <version.mapstruct>1.5.5.Final</version.mapstruct>
         <version.jnanoid>2.0.0</version.jnanoid>
@@ -405,6 +405,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>6.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.authenhub.kafka</groupId>
+            <artifactId>kafka-service</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
