--- a/config/application.yml
+++ b/config/application.yml
@@ -8,7 +8,7 @@ spring:
     active: dev
     # Include other configuration files
     include:
-      - kafka
+#      - kafka
       - database
       - mail
       - payment
