--- a/pom.xml
+++ b/pom.xml
@@ -384,18 +384,6 @@
         <!-- JSoup dependency already declared above -->
 
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>3.9.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-            <version>3.3.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
             <version>2.0.5</version>
@@ -407,11 +395,11 @@
             <version>6.1.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.authenhub.kafka</groupId>
-            <artifactId>kafka-service</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+<!--?        <dependency>-->
+<!--?            <groupId>com.authenhub.kafka</groupId>-->
+<!--?            <artifactId>kafka-service</artifactId>-->
+<!--?            <version>1.0.0</version>-->
+<!--?        </dependency>-->
     </dependencies>
     <dependencyManagement>
         <dependencies>
