--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,12 @@
             <version>6.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.21</version> <!-- Hoặc bản cập nhật mới nhất -->
+        </dependency>
+
 <!--?        <dependency>-->
 <!--?            <groupId>com.authenhub.kafka</groupId>-->
 <!--?            <artifactId>kafka-service</artifactId>-->
