--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <modelmapper.version>3.1.0</modelmapper.version>
         <javatube.version>1.0.0</javatube.version>
         <playwright.version>1.41.0</playwright.version>
+        <hibernate.version>6.4.4.Final</hibernate.version>
     </properties>
 
     <repositories>
@@ -124,6 +125,13 @@
             <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
 
+        <!-- Hibernate JPA Metamodel Generator -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Thymeleaf for template processing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -141,7 +149,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.5</version>
+            <version>2.0.4</version>
         </dependency>
 
         <dependency>
@@ -508,8 +516,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -521,11 +529,11 @@
                             <artifactId>mapstruct-processor</artifactId>
                             <version>${version.mapstruct}</version>
                         </path>
-                        <!--						<path>-->
-                        <!--							<groupId>org.hibernate</groupId>-->
-                        <!--							<artifactId>hibernate-jpamodelgen</artifactId>-->
-                        <!--							<version>${hibernate.version}</version>-->
-                        <!--						</path>-->
+                        <path>
+                            <groupId>org.hibernate.orm</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>${hibernate.version}</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
