--- a/config/application-server.yml
+++ b/config/application-server.yml
@@ -12,7 +12,7 @@ server:
 
 # CORS configuration
 cors:
-  allowed-origins: http://localhost:5173
+  allowed-origins: http://localhost:5173,http://localhost:5174
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
   allowed-headers: Authorization,Content-Type
   exposed-headers: "*"
